@@ -1,1 +1,1 @@
-1.8.12.0-rc3
+1.8.12.0
